# libdkapture

./: .clang-format  .gitignore  .gitmodules  Makefile  NOTICE  README.md  REUSE.toml  version
demo/: Makefile  demo.cpp
docs/: .$dkapture.drawio.bkp  arp-observe.md  bio-stat.md  collection_perf_report.md  dkapture-api.md  dkapture.drawio  dkapture性能测试.md  elfverify.md  ext4snoop.md  file-occupation.md  frtp.md  graphics-snoop.md  hrtimer.md  index.html  lscgroup.md  lsns.md  lsock.md  lsof.md  net-filter.md  net-limit.md  net-snoop.md  net-traffic.md  peek-fd.md  power-snoop.md  rcu-insight.md  retreat-file.md  rm-forbid.md  sched-snoop.md  signal-filter.md  spinlock_ob.md  switch_count.md  syscall-stat.md  tc-cgroup.md  tc-if.md  tc-ip.md  tc-port.md  tc-process.md  tcp-insight.md  thermal-snoop.md  trace-exec.md  (+7 more)
filter/: Makefile  net-filter.bpf.c  net-filter.cpp  net-filter.h  rm-forbid.bpf.c  rm-forbid.cpp  signal-filter.bpf.c  signal-filter.cpp  signal-filter.h  tc-cgroup.bpf.c  tc-cgroup.cpp  tc-group.cpp  tc-if.bpf.c  tc-if.cpp  tc-ip.bpf.c  tc-ip.cpp  tc-port.bpf.c  tc-port.cpp  tc-process.bpf.c  tc-process.cpp
include/: Kblk.h  Kcom.h  Kerrno.h  Kfuncs.h  Kmem.h  Kstr-utils.h  Ktask.h  Makefile  Ucom.h  Ukallsyms.h  Ulog.h  Usr-grp.h  blk_types.h  com.h  dkapture.h  endian.h  fcntl-defs.h  jhash.h  kallsyms.h  log.h  net.h  spinlock_ob.h  switch_count.h  syscall-tbl.h  urblat.h  usb_ob.h  usr-grp.h  wakeup_count.h
kmodules/: Makefile  retreat-exe.c  (+1 more)
net-speed-monitor/: CMakeLists.txt  bpf_worker.cpp  bpf_worker.h  main.cpp  speed_model.cpp  speed_model.h
(+176 files in other folders)
